<resources>
    <string name="app_name">XMPP Chat</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">Dont have an account?,</string>
    <string name="create_here">Create Here</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_button_create_account">Join Us</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_user_contact">Willians Ojeda</string>
    <string name="text_user_state">Available</string>
    <string name="text_tab_contact">Contacts</string>
    <string name="text_tab_chat">Chats</string>
    <string name="text_user_or_group_contact">Willians Ojeda</string>
    <string name="text_chatlist_last_msg">Ooop</string>
    <string name="text_chastlist_time_last_msg">20:30</string>
    <string name="contacts">Contacts</string>
    <string name="chatlist">Chats</string>
    <string name="text_name_contact_toolbar">Willians Ojeda</string>
    <string name="text_message_chat_cv">El cuadrado del primer termino es igual al doble producto del primero por el segundo mas el cuadrado del segundo termino</string>
</resources>
