<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/picture_card"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:layout_marginBottom="@dimen/margin_bottom_contact_cv"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_divider"
        android:color="@android:color/darker_gray"/>


    <LinearLayout
        android:id="@+id/content_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/picture_contact_chatlist_cv"
            android:layout_width="@dimen/width_image_contact"
            android:layout_height="@dimen/height_image_contact"
            android:scaleType="centerCrop"
            android:layout_marginRight="@dimen/padding_horizontal_picture_contact"
            android:src="@drawable/samsung_galaxy_s4_contacts"
            />

        <LinearLayout
            android:layout_width="@dimen/width_chatlist_last_msg"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/user_or_group_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_user_or_group_contact"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_bottom_username_contact_cv"/>

            <TextView
                android:id="@+id/chatlist_last_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_chatlist_last_msg"/>

        </LinearLayout>

        <TextView
            android:id="@+id/chatlist_time_last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_chastlist_time_last_msg"
            android:layout_gravity="end|top"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_divider"
        android:color="@android:color/darker_gray"/>


</android.support.v7.widget.CardView>
